pequeña correcion en el buscador

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         >
         <div>
           <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-danger" type="submit">Search</button>
+            <input class="form-control me-2" type="search" placeholder="Qué queres escuchar?" aria-label="Search">
+            <button class="btn btn-outline-danger" type="submit">Buscar</button>
           </form>
         </div>
         <button
