se agrego bordes al form

--- a/pages/administrador.html
+++ b/pages/administrador.html
@@ -151,35 +151,35 @@
         <h2 class="modal-title fs-5" id="ModalAdminCancionesLabel">Agregue/Modifique Sus Canciones</h2>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body ">
             <form>
 
               <div class="mb-3">
                 <label for="Titulo" class="form-label">Titulo*</label>
-                 <input type="text" class="form-control" id="Titulo">
+                 <input type="text" class="form-control border border-3 border-info-subtle" id="Titulo" minlength="6" maxlength="100" placeholder="" required>
               </div>
               <div class="mb-3">
                 <label for="Grupo" class="form-label">Grupo*</label>
-                 <input type="text" class="form-control" id="Grupo">
+                 <input type="text" class="form-control border border-3 border-info-subtle" id="Grupo"  minlength="6" maxlength="100" placeholder="Las Pastillas del Abuelo" required>
               </div>
               <div class="mb-3">
                 <label for="Categoria" class="form-label">Categoria*</label>
-                 <input type="text" class="form-control" id="Categoria">
+                 <input type="text" class="form-control border border-3 border-info-subtle" id="Categoria"  minlength="6" maxlength="100" placeholder="Rock" required>
               </div>
               <div class="mb-3">
                 <label for="Imagen" class="form-label">Imagen*</label>
-                 <input type="text" class="form-control" id="Imagen">
+                 <input type="text" class="form-control border border-3 border-info-subtle" id="Imagen" minlength="6" maxlength="100" placeholder="Url" required>
               </div>
               <div class="mb-3">
                 <label for="Duracion" class="form-label">Duracion*</label>
-                 <input type="text" class="form-control" id="Duracion">
+                 <input type="text" class="form-control border border-3 border-info-subtle" id="Duracion"  minlength="6" maxlength="100" placeholder="3:40" required>
               </div>
               <div class="mb-3">
                 <label for="Cancion" class="form-label">Cancion*</label>
-                 <input type="text" class="form-control" id="Cancion">
+                 <input type="text" class="form-control border border-3 border-info-subtle" id="Cancion"  minlength="6" maxlength="100" placeholder="¿Que es Dios?" required>
               </div>
               <div class="text-end my-2">
-                <button class="btn btn-outline-info" type="submit">AGREGAR</button>
+                <button class="btn btn-info" type="submit">AGREGAR</button>
 
               </div>
             </form>
