maquetacion administracion,se cambio info de la tabla y form(terminado maquetacion)

--- a/pages/administrador.html
+++ b/pages/administrador.html
@@ -107,6 +107,7 @@
                     <th>GRUPO</th>
                     <th>CATEGORIA</th>
                     <th>TITULO</th>
+                    <th>CANCION</th>
                     <th>ACCIONES</th>
                 
 
@@ -117,6 +118,7 @@
                 <tr>
                   <td>1</td>
                   <td>GGGG</td>
+                  <td>CCCC</td>
                   <td>CCCC</td>
                   <td>CCCC</td>
                   <td>
@@ -130,6 +132,7 @@
                   <td>GGGG</td>
                   <td>CCCC</td>
                   <td>CCCC</td>
+                  <td>CCCC</td>
                   <td>
                     <button class="btn btn-outline-danger mb-2 mb-md-0">Eliminar</button>
                     <button class="btn btn-outline-success">Modificar</button>
@@ -139,6 +142,7 @@
                 <tr>
                   <td>3</td>
                   <td>GGGG</td>
+                  <td>CCCC</td>
                   <td>CCCC</td>
                   <td>CCCC</td>
                   <td>
@@ -199,8 +203,8 @@
                  <input type="text" class="form-control border border-3 border-info-subtle" id="Duracion"  minlength="6" maxlength="100" placeholder="3:40" required>
               </div>
               <div class="mb-3">
-                <label for="Cancion" class="form-label">Cancion( Url )*</label>
-                 <input type="text" class="form-control border border-3 border-info-subtle" id="Cancion"  minlength="6" maxlength="100" placeholder="¿Que es Dios?" required>
+                <label for="Cancion" class="form-label">Cancion( Url ) (MP3)*</label>
+                 <input type="url" class="form-control border border-3 border-info-subtle" id="Cancion"  minlength="6" maxlength="100" placeholder="¿Que es Dios?" required>
               </div>
             
               <div class="modal-footer mt-3  ">
