--- a/pages/administrador.html
+++ b/pages/administrador.html
@@ -25,6 +25,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <link href="
+      https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="../css/administrador.css" />
     <title>STREAMING DE MUSICA</title>
   </head>
@@ -205,6 +208,8 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="
+    https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.all.min.js"></script>
     <script src="../JS/admin.js" type="module"></script>
   </body>
 </html>
