--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-success">Iniciar</button>
+        <button type="button" class="btn btn-success" id="btnLogin">Iniciar</button>
       </div>
     </div>
   </div>
