--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -94,12 +94,12 @@
         <section class="container-fluid section-info">
             <div class="row div-section " >
                 <div class="col-12 col-md-6">
-                  <img class="img-nosotros" src="../img/imagenes-page-nosotros/1642656848_542137_1642656976_noticia_normal.jpg" alt="straming">
+                    <img class="img-nosotros" src="../img/imagenes-page-nosotros/1642656848_542137_1642656976_noticia_normal.jpg" alt="straming">
   
                   
                 </div>
                 <div class="col-12 col-md-6">
-                <h1 class="title-Sobrenosotros">Nuestra Mission</h1>
+                       <h1 class="title-Sobrenosotros">Nuestra Mission</h1>
                       <p class="parrafoSobrenosotros">
                         "Nuestra misión es ofrecer una experiencia musical inigualable, conectando a los oyentes con la música que aman, en cualquier momento y lugar, con la más alta calidad de sonido. Creemos en el  Nos comprometemos a crear una plataforma accesible y diversa, donde todos los géneros y artistas tengan un espacio para brillar.personalizadas y contenido exclusivo que refleje los gustos y pasiones de nuestra audiencia global."
                       </p> 
@@ -116,9 +116,8 @@
             </div>
             <div class="col-12 col-md-6">
            
-                    <h1 class="title-Sobrenosotros">Actualización Continua</h1>
-            <p class="parrafoSobrenosotros">" Mantener nuestro catálogo siempre actualizado con lo mejor de la música, incorporando nuevas tendencias y éxitos mundiales para que nuestros usuarios estén al día con lo más relevante en el mundo musical.para ofrecer una selección diversa de géneros y artistas de todo el mundo, asegurando que cada usuario encuentre música que resuene con sus gustos y"
-                  </p> 
+              <h1 class="title-Sobrenosotros">Actualización Continua</h1>
+              <p class="parrafoSobrenosotros">" Mantener nuestro catálogo siempre actualizado con lo mejor de la música, incorporando nuevas tendencias y éxitos mundiales para que nuestros usuarios estén al día con lo más relevante en el mundo musical.para ofrecer una selección diversa de géneros y artistas de todo el mundo, asegurando que cada usuario encuentre música que resuene con sus gustos y"</p> 
 
 
             </div>
@@ -128,7 +127,7 @@
               <div class="col-12 col-md-6">
                 <img class="img-nosotros" src="../img/imagenes-page-nosotros/1366_2000.jpg" alt="straming">
               </div>
-              <div class="col-12 col-md-6">
+              <div class="col-12 col-md-6 ">
              <h1 class="title-Sobrenosotros">Objetivos</h1>
                    <li> <strong> Calidad de Sonido Excepcional:</strong> Brindar a nuestros usuarios una experiencia auditiva de la más alta calidad, con tecnología de vanguardia que garantice la pureza y claridad del sonido en cada reproducción.</li>
                    <li><strong>Catálogo Amplio y Diverso: </strong> Ampliar continuamente nuestra biblioteca musical para ofrecer una selección diversa de géneros y artistas de todo el mundo, asegurando que cada usuario encuentre música que resuene con sus gustos y emociones.</li>
