--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <title>STREAMING DE MUSICA</title>
   </head>
   <body>
+    <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html"
@@ -92,6 +93,7 @@
         </div>
       </div>
     </nav>
+  </header>
     <main class="container-fluid">
       <section class="row">
         <article class="col-md-1">
