--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -94,8 +94,8 @@
     <main class="container">
       <h1 class="text-center my-3">Detalles de la Cancion</h1>
       <h3 class="mb-5">Categoria: </h3>
-      <section class="text-center ">
-        <div class="row">
+      <section class="text-center contenedorPadre">
+        <div class="row padreInfo">
           <div class="col logoCancion"><img src="../img/ab67616d0000b273c3780b28120b1bc2869a2ca7.jpg" alt="logo">
             <a target="_blank" href="#" class="row"><i class="bi bi-play-fill fs-1"></i></a>
           </div>
