--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -25,7 +25,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>STREAMING DE MUSICA</title>
   </head>
   <body>
@@ -36,7 +36,12 @@
         >
         <div>
           <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Qué queres escuchar?" aria-label="Search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Qué queres escuchar?"
+              aria-label="Search"
+            />
             <button class="btn btn-outline-danger" type="submit">Buscar</button>
           </form>
         </div>
@@ -49,7 +54,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <strong class="navbar-toggler-icon"></strong>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -86,9 +91,26 @@
         </div>
       </div>
     </nav>
-    <main></main>
+    <main class="container">
+      <h1 class="text-center my-3">Detalles de la Cancion</h1>
+      <h3 class="mb-5">Categoria: </h3>
+      <section class="text-center contenedorPadre">
+        <div class="row padreInfo">
+          <div class="col logoCancion"><img src="../img/ab67616d0000b273c3780b28120b1bc2869a2ca7.jpg" alt="logo">
+            <a target="_blank" href="#" class="row"><i class="bi bi-play-fill fs-1"></i></a>
+          </div>
+          <div class="col text-start infoCancion align-content-center shadow border rounded-3 fs-5">
+            <p><strong>Codigo:</strong></p>
+            <p><strong>Titulo:</strong></p>
+            <p><strong>Artista:</strong></p>
+            <p><strong>Duracion:</strong></p>
+            <p><strong>Cancion:</strong></p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="bg-body-tertiary">
-      <section class="container-fluid">
+      <section class="container-fluid py-2">
         <p class="text-center">©Todos los derechos reservados</p>
       </section>
     </footer>
