--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               ></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/administrador.html">Premium</a>
+              <a class="nav-link" href="/pages/administrador.html" id="mostrarAdmin" style="display: none;">Administrador</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -173,6 +173,7 @@
       </section>
     </footer>
     <!-- Modal -->
+
 <div class="modal fade" id="modalLogin" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -181,7 +182,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form class="w-50 ms-3">
+        <form class="w-50 ms-3" id="ingresarFormulario">
           <div class="mb-3">
             <label for="loginEmail" class="form-label">Correo Electrónico</label>
             <input type="email" class="form-control" id="loginEmail" required />
@@ -190,28 +191,34 @@
             <label for="loginPassword" class="form-label">Contraseña</label>
             <input type="password" class="form-control" id="loginPassword" required />
           </div>
-          <button type="button" class="btn btn-light w-100 mb-2" style="border: 1px solid rgba(0, 0, 0, 0.125)">
+          <a href="/pages/error404.html"><button type="button" class="btn btn-light w-100 mb-2" style="border: 1px solid rgba(0, 0, 0, 0.125)">
             <img src="./img/google-icon.svg" alt="Google Icon" class="tamañoLogoGyF me-2" />
             Iniciar con Google
-          </button>
-          <button type="button" class="btn btn-primary w-100 mb-2">
+          </button></a>
+          <a href="/pages/error404.html"><button type="button" class="btn btn-primary w-100 mb-2" >
             <img src="./img/facebook-icon.svg" alt="facebook-icon" class="tamañoLogoGyF me-2" />
             Iniciar con Facebook
-          </button>
+          </button></a>
 
-          <a href="#" class="d-block text-center">¿Olvidaste tu contraseña?</a>
+          <a href="/pages/error404.html" class="d-block text-center">¿Olvidaste tu contraseña?</a>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-success" id="btnLogin">Iniciar</button>
+        <button type="submit" class="btn btn-success">Iniciar</button>
       </div>
+      </form>
     </div>
   </div>
 </div>
-    <script
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+<script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="/JS/iniciodeSesion.js"></script>
   </body>
 </html>
