--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -142,24 +142,26 @@
             <div class="row info">
               <h1 class="title-quienessomos">Quienes somos</h1>
               <div class="col-12  col-md-3  info-nosotros">  
-                 <img class="avatar" src="https://tse4.mm.bing.net/th?id=OIP.JBpgUJhTt8cI2V05-Uf53AHaG1&pid=Api&P=0&h=180" alt="avatar">
-                 <p class="nombre">Franco</p>
+                 <img class="avatar" src="../img/avatar/3d-render-human-vector-43832539.jpg" alt="avatar">
+                 <p class="nombre">
+                    Gonzalez Axel</p>
                  <p class="desarollador">Fronthend</p>
                 </div>
               <div class="col-12  col-md-3  info-nosotros">  
-                  <img class="avatar" src="https://tse1.mm.bing.net/th?id=OIP.uPDWo40ObyW7O0RY1fuzrgHaHa&pid=Api&P=0&h=180" alt="avatar">
-                  <p class="nombre">Leo Recalde</p>
+                  <img class="avatar" src="../img/avatar/OIP (1).jpeg" alt="avatar">
+                  <p class="nombre">
+                    Pereyra Franco</p>
                   <p class="desarollador">Fronthend</p>
                  </div>
                <div class="col-12 col-md-3 info-nosotros">  
-                  <img class="avatar" src="../img/imagenes-page-nosotros/16126242166985474.jpg" alt="avatar">
+                  <img class="avatar" src="../img/avatar/avatarIsma.jfif" alt="avatar">
                   <p class="nombre">Ismael Vargas</p>
                   <p class="desarollador">Fronthend</p>
                   
                  </div>
                  <div class="col-12  col-md-3  info-nosotros">  
-                  <img class="avatar" src="https://tse4.mm.bing.net/th?id=OIP.OSrwT8T4yYOv7TkW-Hy8yAAAAA&pid=Api&P=0&h=180" alt="avatar">
-                  <p class="nombre">ALfredoo</p>
+                  <img class="avatar" src="../img/avatar/happy-smiling-young-man-avatar-3d-portrait-of-a-man-cartoon-character-people-illustration-isolated-on-white-background-vector.jpg" alt="avatar">
+                  <p class="nombre">Recalde Leonardo</p>
                   <p class="desarollador">Fronthend</p>
                   
                  </div>
