--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="/JS/apps.js" type="module"></script>
+    <script src="/JS/conexionPrincipal.js" ></script>
   </body>
 </html>
 
