--- a/index.html
+++ b/index.html
@@ -37,15 +37,19 @@
           >
           <div class="d-none d-md-block">
             <form class="d-flex" role="search">
-              <input
+              <div class="mt-2">
+                <input
                 class="form-control me-2"
                 type="search"
                 placeholder="Qué queres escuchar?"
                 aria-label="Search"
               />
-              <button class="btn btn-outline-danger" type="submit">
-                Buscar
-              </button>
+              </div>
+              <div class="mt-2 ms-3">
+                <button class="btn btn-outline-danger" type="submit">
+                  Buscar
+                </button>
+              </div>
             </form>
           </div>
           <button
@@ -61,14 +65,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="./index.html"
-                  ><i class="bi bi-house text-danger"></i
-                ></a>
-              </li>
               <li class="nav-item">
                 <a
                   class="nav-link"
@@ -100,6 +96,14 @@
                   </li>
                   <li><a class="dropdown-item" href="#">Registrarse</a></li>
                 </ul>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="./index.html"
+                  ><i class="bi bi-house text-danger"></i
+                ></a>
               </li>
               <li class="nav-item">
                 <i class="bi bi-gear-fill text-danger nav-link"></i>
