--- a/index.html
+++ b/index.html
@@ -94,8 +94,16 @@
                       >Inicia Sesión</a
                     >
                   </li>
-                  <li><a class="dropdown-item" href="#">Registrarse</a></li>
+                  <li><a class="dropdown-item" href="./pages/error404.html">Registrarse</a></li>
                 </ul>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="./pages/nosotros.html"
+                  >Nosotros</i
+                ></a>
               </li>
               <li class="nav-item">
                 <a
@@ -113,7 +121,7 @@
               </li>
             </ul>
           </div>
-          <div class="d-block d-md-none">
+          <div class="d-block d-md-none mt-2">
             <form class="d-flex" role="search">
               <input
                 class="form-control me-2"
@@ -121,7 +129,7 @@
                 placeholder="Qué queres escuchar?"
                 aria-label="Search"
               />
-              <button class="btn btn-outline-danger" type="submit">
+              <button class="btn btn-outline-danger ms-10" type="submit">
                 Buscar
               </button>
             </form>
@@ -173,23 +181,23 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
-                  src="./img/img prueba/La plataforma para exhibición de productos en el fondo oscuro con una nota musical colorida _ Foto Premium.jpeg"
-                  class="d-block w-100"
-                  alt="..."
+                  src="img/artistas y albunes/Sex-Love-Cover_preview.jpg"
+                  class="d-block w-100 bannerscarousel"
+                  alt="tiago pzk portada album"
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="./img/img prueba/6a23f46f-49a8-409f-be70-869717560a93.jpeg"
-                  class="d-block w-100"
-                  alt="..."
+                  src="./img/artistas y albunes/khea.jpg"
+                  class="d-block w-100 bannerscarousel"
+                  alt="khea portada album"
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="./img/img prueba/kayblack mistérios album.jpeg"
-                  class="d-block w-100"
-                  alt="..."
+                  src="./img/artistas y albunes/lali.jpeg"
+                  class="d-block w-100 bannerscarousel"
+                  alt="lali-portada album"
                 />
               </div>
             </div>
