--- a/pages/administrador.html
+++ b/pages/administrador.html
@@ -43,15 +43,19 @@
           >
           <div class="d-none d-md-block">
             <form class="d-flex" role="search">
-              <input
+              <div class="mt-2">
+                <input
                 class="form-control me-2"
                 type="search"
                 placeholder="Qué queres escuchar?"
                 aria-label="Search"
               />
-              <button class="btn btn-outline-danger" type="submit">
-                Buscar
-              </button>
+              </div>
+              <div class="mt-2 ms-3">
+                <button class="btn btn-outline-danger" type="submit">
+                  Buscar
+                </button>
+              </div>
             </form>
           </div>
           <button
@@ -68,15 +72,11 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="../index.html"
-                  ><i class="bi bi-house text-danger"></i
-                ></a>
-              </li>
-              <li>
                 <a
-                  class="nav-link active"
-                  aria-current="page"
+                  class="nav-link"
                   href="/pages/administrador.html"
+                  id="mostrarAdmin"
+                  style="display: none"
                   >Administrador</a
                 >
               </li>
@@ -100,8 +100,24 @@
                       >Inicia Sesión</a
                     >
                   </li>
-                  <li><a class="dropdown-item" href="#">Registrarse</a></li>
+                  <li><a class="dropdown-item" href="./pages/error404.html">Registrarse</a></li>
                 </ul>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="../pages/nosotros.html"
+                  >Nosotros</i
+                ></a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="./index.html"
+                  ><i class="bi bi-house text-danger"></i
+                ></a>
               </li>
               <li class="nav-item">
                 <i class="bi bi-gear-fill text-danger nav-link"></i>
@@ -111,7 +127,7 @@
               </li>
             </ul>
           </div>
-          <div class="d-block d-md-none">
+          <div class="d-block d-md-none mt-2">
             <form class="d-flex" role="search">
               <input
                 class="form-control me-2"
@@ -119,7 +135,7 @@
                 placeholder="Qué queres escuchar?"
                 aria-label="Search"
               />
-              <button class="btn btn-outline-danger" type="submit">
+              <button class="btn btn-outline-danger ms-10" type="submit">
                 Buscar
               </button>
             </form>
