--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -31,18 +31,24 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"
+        <a class="navbar-brand" href="../index.html"
           ><i class="bi bi-youtube text-danger me-2"></i>YOUMUSIC</a
         >
-        <div>
+        <div class="d-none d-md-block">
           <form class="d-flex" role="search">
-            <input
+            <div class="mt-2">
+              <input
               class="form-control me-2"
               type="search"
               placeholder="Qué queres escuchar?"
               aria-label="Search"
             />
-            <button class="btn btn-outline-danger" type="submit">Buscar</button>
+            </div>
+            <div class="mt-2 ms-3">
+              <button class="btn btn-outline-danger" type="submit">
+                Buscar
+              </button>
+            </div>
           </form>
         </div>
         <button
@@ -54,17 +60,18 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <strong class="navbar-toggler-icon"></strong>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"
-                ><i class="bi bi-house text-danger"></i
-              ></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/administrador.html">Premium</a>
+              <a
+                class="nav-link"
+                href="/pages/administrador.html"
+                id="mostrarAdmin"
+                style="display: none"
+                >Administrador</a
+              >
             </li>
             <li class="nav-item dropdown">
               <a
@@ -77,9 +84,33 @@
                 Ingresá
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Inicia Sesión</a></li>
-                <li><a class="dropdown-item" href="#">Registrarse</a></li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="#"
+                    data-bs-toggle="modal"
+                    data-bs-target="#modalLogin"
+                    >Inicia Sesión</a
+                  >
+                </li>
+                <li><a class="dropdown-item" href="./pages/error404.html">Registrarse</a></li>
               </ul>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="./pages/nosotros.html"
+                >Nosotros</i
+              ></a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="../index.html"
+                ><i class="bi bi-house text-danger"></i
+              ></a>
             </li>
             <li class="nav-item">
               <i class="bi bi-gear-fill text-danger nav-link"></i>
@@ -88,6 +119,19 @@
               <i class="bi bi-person-circle text-danger nav-link"></i>
             </li>
           </ul>
+        </div>
+        <div class="d-block d-md-none mt-2">
+          <form class="d-flex" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Qué queres escuchar?"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-danger ms-10" type="submit">
+              Buscar
+            </button>
+          </form>
         </div>
       </div>
     </nav>
