corrijo errores de validaciones

--- a/pages/administrador.html
+++ b/pages/administrador.html
@@ -209,6 +209,7 @@
                   placeholder="Las Pastillas del Abuelo"
                   required
                 />
+                <div class="invalid-feedback">Escribe el nombre completo, debe contener mas de 3 carácteres</div>
               </div>
               <div class="mb-3">
                 <label for="Categoria" class="form-label">Género*</label>
@@ -219,6 +220,7 @@
                   placeholder="Rock"
                   required
                 />
+                <div class="invalid-feedback">Escribe un género completo, debe contener mas de 3 carácteres </div>
               </div>
               <div class="mb-3">
                 <label for="Titulo" class="form-label">Titulo*</label>
@@ -229,6 +231,7 @@
                   placeholder="¿Que es Dios?"
                   required
                 />
+                <div class="invalid-feedback">Escribe el nombre completo, debe contener mas de 3 carácteres</div>
               </div>
               <div class="mb-3">
                 <label for="Imagen" class="form-label">Imagen( Url )*</label>
