--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                 aria-label="Search"
                 id="inputBuscar"
               />
-              </div>
               <div class="mt-2 ms-3">
                 <button class="btn btn-outline-danger" type="submit">
                   Buscar
@@ -122,14 +121,14 @@
             </ul>
           </div>
           <div class="d-block d-md-none mt-2">
-            <form class="d-flex" role="search">
+            <form class="d-flex" role="search" id="formularioBuscar">
               <input
                 class="form-control me-2"
                 type="search"
                 placeholder="Qué queres escuchar?"
                 aria-label="Search"
               />
-              <button class="btn btn-outline-danger ms-10" type="submit">
+              <button class="btn btn-outline-danger ms-10" type="submit" id="inputBuscar">
                 Buscar
               </button>
             </form>
