--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -104,7 +104,7 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="./pages/nosotros.html"
+                href="/pages/nosotros.html"
                 >Nosotros</a
               >
             </li>
@@ -262,10 +262,101 @@
         <p class="text-center">©Todos los derechos reservados</p>
       </section>
     </footer>
+
+<!-- Modal -->
+
+<div
+class="modal fade"
+id="modalLogin"
+data-bs-backdrop="static"
+data-bs-keyboard="false"
+tabindex="-1"
+aria-labelledby="staticBackdropLabel"
+aria-hidden="true"
+>
+<div class="modal-dialog">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h1 class="modal-title fs-5" id="staticBackdropLabel">Login</h1>
+      <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="modal"
+        aria-label="Close"
+      ></button>
+    </div>
+    <div class="modal-body">
+      <form class="w-50 ms-3" id="ingresarFormulario">
+        <div class="mb-3">
+          <label for="loginEmail" class="form-label"
+            >Correo Electrónico</label
+          >
+          <input
+            type="email"
+            class="form-control"
+            id="loginEmail"
+            required
+          />
+        </div>
+        <div class="mb-3">
+          <label for="loginPassword" class="form-label">Contraseña</label>
+          <input
+            type="password"
+            class="form-control"
+            id="loginPassword"
+            required
+          />
+        </div>
+        <a href="/pages/error404.html"
+          ><button
+            type="button"
+            class="btn btn-light w-100 mb-2"
+            style="border: 1px solid rgba(0, 0, 0, 0.125)"
+          >
+            <img
+              src="../img/google-icon.svg"
+              alt="Google Icon"
+              class="tamañoLogoGyF me-2"
+            />
+            Iniciar con Google
+          </button></a
+        >
+        <a href="/pages/error404.html"
+          ><button type="button" class="btn btn-primary w-100 mb-2">
+            <img
+              src="../img/facebook-icon.svg"
+              alt="facebook-icon"
+              class="tamañoLogoGyF me-2"
+            />
+            Iniciar con Facebook
+          </button></a
+        >
+
+        <a href="/pages/error404.html" class="d-block text-center"
+          >¿Olvidaste tu contraseña?</a
+        >
+
+        <div class="modal-footer">
+          <button
+            type="button"
+            class="btn btn-secondary"
+            data-bs-dismiss="modal"
+          >
+            Cancelar
+          </button>
+          <button type="submit" class="btn btn-success">Iniciar</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+</div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="../JS/login.js"></script>
   </body>
 </html>
