se ajustan detalles

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <!-- Las tarjetas se insertarán aquí por JavaScript -->
         </div>
         <div id="detalleCancion" class="container mt-5" style="display: none">
-          <!-- Los detalles de la canción se insertarán aquí dinámicamente -
+          <!-- Los detalles de la canción se insertarán aquí dinámicamente -->
           <!-- Las imágenes y títulos se insertarán aquí por JavaScript -->
         </div>
       </div>
