--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -25,6 +25,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/SobreNosotros.css" />
     <title>STREAMING DE MUSICA</title>
   </head>
