--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
                 </button>
             </ul>
           </div>
-          <div class="d-block d-md-none">
-            <form class="d-flex" role="search">
+          <div class="d-block d-md-none mt-2">
+            <form class="d-flex" role="search"id="formularioBuscar">
               <input
                 class="form-control me-2"
                 type="search"
                 placeholder="Qué queres escuchar?"
                 aria-label="Search"
               />
-              <button class="btn btn-outline-danger" type="submit">
+              <button class="btn btn-outline-danger" type="submit" id="inputBuscar">
                 Buscar
               </button>
             </form>
