--- a/pages/administrador.html
+++ b/pages/administrador.html
@@ -42,7 +42,7 @@
             ><i class="bi bi-youtube text-danger me-2"></i>YOUMUSIC</a
           >
           <div class="d-none d-md-block">
-            <form class="d-flex" role="search">
+            <form class="d-flex" role="search" id="formularioBuscar">
               <div class="mt-2">
                 <input
                 class="form-control me-2"
@@ -52,7 +52,7 @@
               />
               </div>
               <div class="mt-2 ms-3">
-                <button class="btn btn-outline-danger" type="submit">
+                <button class="btn btn-outline-danger" type="submit" id="inputBuscar">
                   Buscar
                 </button>
               </div>
@@ -135,14 +135,14 @@
             </ul>
           </div>
           <div class="d-block d-md-none mt-2">
-            <form class="d-flex" role="search">
+            <form class="d-flex" role="search" id="formularioBuscar">
               <input
                 class="form-control me-2"
                 type="search"
                 placeholder="Qué queres escuchar?"
                 aria-label="Search"
               />
-              <button class="btn btn-outline-danger ms-10" type="submit">
+              <button class="btn btn-outline-danger" type="submit" id="inputBuscar">
                 Buscar
               </button>
             </form>
